@startuml

skinparam monochrome true
skinparam classAttributeIconSize 0

class Containers2d {
  + Containers2d()
  + ~Containers2d()
  + initializeContainerWithRandomNumbers()
  + processContainer()
  # processContainerByRows()
  # processContainerByCols()
}

class Array1d {
  + Array1d()
  + ~Array1d()
  + initializeContainerWithRandomNumbers()
  # processContainerByRows()
  # processContainerByCols()
  # processArray1dByRows()
  # processArray1dByCols()
}

class Array2d {
  + Array2d(theWidth: int, theHeight: int)
  + ~Array2d()
  + initializeContainerWithRandomNumbers()
  # processContainerByRows()
  # processContainerByCols()
  # processArray2dByRows()
  # processArray2dByCols()
}

class Vector2d {
  + Vector2d()
  + ~Vector2d()
  + initializeContainerWithRandomNumbers()
  # processContainerByRows()
  # processContainerByCols()
  # processVector2dByRows()
  # processVector2dByCols()
}

Containers2d <|-- Array1d
Containers2d <|-- Array2d
Containers2d <|-- Vector2d
@enduml